# hfv-vereine-scraper-openapi

./: .gitignore  Dockerfile  README.md  makefile  openapi.json  pyproject.toml  requirements.txt  samconfig.toml  template.yml
.github/workflows/: ci.yml  release-deploy.yml
app/: cache.py  main.py  models.py  scraper.py  utils.py
tests/: test_api.py
tools/: export_openapi.py
