[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hfv_vereine_scraper_openapi"
version = "1.0.0"
description = "FastAPI service that scrapes HFV clubs and serves them via an API."
authors = [{ name = "Clemens Rau" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "openapi-spec-validator>=0.7.1",
]

[tool.ruff]
line-length = 120
target-version = "py311"
# Ordner/Dateien, die Ruff nicht prüfen soll:
exclude = [
  "data/",
  "openapi.json",
  ".venv/",
  "build/",
  "dist/",
  ".pytest_cache/",
]

[tool.ruff.lint]
# Basis + Imports + (optional) PyUpgrade
select = ["E", "F", "I", "UP"]
# Beispiel für Ausnahmen (auskommentieren wenn gewünscht):
# ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
